Getting closed to happy for now. I want to switch to eww here eventually. I do not have that in me though. Maybe christmas

--- a/waybar/style.css
+++ b/waybar/style.css
@@ -174,8 +174,8 @@ tooltip label {
 }
 #custom-weather{
   background-color: rgba(0,0,0, 0.4);
-  border-top-left-radius: 10px;
-  border-bottom-left-radius: 10px;
+  /* border-top-left-radius: 10px; */
+  /* border-bottom-left-radius: 10px; */
   border-top-right-radius: 0px;
   border-bottom-right-radius: 00px;
 }
@@ -185,5 +185,13 @@ tooltip label {
   border-bottom-left-radius: 0px;
   border-top-right-radius: 10px;
   border-bottom-right-radius: 10px;
+  color: #490DCD;
+}
+#custom-nvidia{
+  background-color: rgba(0,0,0, 0.4);
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+  border-top-right-radius: 0px;
+  border-bottom-right-radius: 00px;
   color: #490DCD;
 }
