--- a/waybar/style.css
+++ b/waybar/style.css
@@ -161,8 +161,8 @@ tooltip label {
   padding-right: 8px;
   padding-left: 10px;
   background-color: rgba(0,0,0, 0.4);
-  border-top-right-radius: 10px;
-  border-bottom-right-radius: 10px;
+  /* border-top-right-radius: 10px; */
+  /* border-bottom-right-radius: 10px; */
 }
 #pulseaudio{
   color: #490DCD;
@@ -193,5 +193,13 @@ tooltip label {
   border-bottom-left-radius: 10px;
   border-top-right-radius: 0px;
   border-bottom-right-radius: 00px;
+  color: #490DCD;
+}
+#custom-notifs{
+  background-color: rgba(0,0,0, 0.4);
+  border-top-left-radius: 0px;
+  border-bottom-left-radius: 0px;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
   color: #490DCD;
 }
