--- a/eww/dashboard/eww.scss
+++ b/eww/dashboard/eww.scss
@@ -2,7 +2,7 @@
 *{
 	all: unset;
 	font-family: 'JetBrains Mono Nerd Font';
-  color: #460cb2;
+  color: #cba6f7;
   // color: #651085;
 }
 
@@ -10,14 +10,14 @@
 /** Background ***************************************/
 .background {
   border-radius: 12px;
-	background-color: rgba(101,16,133, 0.14);
+	background-color: rgba(203, 166, 247, .25);
   padding: 10px;
 }
 
 
 /** Generic window ***********************************/
 .genwin {
-  background-color: #131313;
+  background-color: rgb(17, 17, 27);
 	border-radius: 16px;
   padding:5px;
 }
@@ -67,7 +67,7 @@
 
 .bright_bar scale trough {
 	all: unset;
-	background-color: #CB2F8D;
+	background-color: #D2F7A6;
 	border-radius: 16px;
 	min-height: 20px;
 	min-width: 240px;
@@ -78,7 +78,7 @@
 	all: unset;
 	border-radius: 16px;
 	/*background-color: #eed49f;*/
-  background-color: #33CCFF;
+  background-color: rgb(203, 166, 247);
 }
 
 .iconvolume {
@@ -89,7 +89,7 @@
 
 .volume_bar scale trough {
 	all: unset;
-	background-color: #CB2F8D;
+	background-color: #D2F7A6;
 	border-radius: 16px;
 	min-height: 20px;
 	min-width: 240px;
@@ -99,7 +99,7 @@
 .volume_bar scale trough highlight {
 	all: unset;
 	border-radius: 16px;
-	background-color: #33CCFF;
+	background-color: rgb(203, 166, 247);
 }
 
 .iconmic {
@@ -110,7 +110,7 @@
 
 .mic_bar scale trough {
 	all: unset;
-	background-color: #CB2F8D;
+	background-color: #D2F7A6;
 	border-radius: 16px;
 	min-height: 20px;
 	min-width: 240px;
@@ -120,7 +120,7 @@
 .mic_bar scale trough highlight {
 	all: unset;
 	border-radius: 16px;
-	background-color: #33CCFF;
+	background-color: rgb(203, 166, 247);
 }
 
 
@@ -135,7 +135,7 @@
 }
 
 .song {
-	color: #8FBCBB;
+	color: rgb(210, 247, 166);
 	font-size : 20px;
 	font-weight : bold;
 	margin : 30px 0px 0px 0px;
@@ -174,11 +174,11 @@
 }
 
 calendar {
-  color: #777777;
+  color: rgb(203, 166, 247);
 }
 
 calendar:selected {
-  color: #eeeeee;
+  color: rgb(210, 247, 166);
 }
 
 calendar.header {
