--- a/waybar/style.css
+++ b/waybar/style.css
@@ -31,13 +31,13 @@ window > box {
   margin-bottom: 5px;
   padding: 3px;
   padding-left: 8px;
-  border: 2px none #33ccff;
+  border: 2px none #D2F7A6;
   background-color: transparent;
 }
 #workspaces {
   padding-left: 0px;
   padding-right: 4px;
-  background-color: rgba(0,0,0, 0.4);
+  background-color: rgba(17,17,27, 0.6);
   border-top-right-radius: 10px;
   border-bottom-right-radius: 10px;
 }
@@ -66,7 +66,7 @@ tooltip label {
 }
 #custom-launcher {
   font-size: 20px;
-  background-color: rgba(0,0,0, 0.4);
+  background-color: rgba(17,17,27, 0.6);
   padding-left: 8px;
   border-top-left-radius: 10px;
   border-bottom-left-radius: 10px;
@@ -74,8 +74,8 @@ tooltip label {
   color: #7ebae4;
 }
 #hyrpland-window{
-  /* background-color: rgba(0,0,0, 0.4); */
-  color: #D8188D;
+  /* background-color: rgba(17,17,27, 0.6); */
+  color: #f38ba8;
 
 }
 #mode,
@@ -90,12 +90,12 @@ tooltip label {
 #network,
 #battery,
 #window{
-  color: #33ccff;
-  background-color: transparent; /* rgba(0,0,0, 0.4);*/
+  color: #D2F7A6;
+  background-color: transparent; /* rgba(17,17,27, 0.6);*/
 }
 #custom-powermenu {
   padding-left: 10px;
-  background-color: rgba(0,0,0, 0.4);
+  background-color: rgba(17,17,27, 0.6);
   padding-right: 10px;
 }
 
@@ -105,107 +105,104 @@ tooltip label {
 /*     color: rgb(26, 24, 38); */
 /* } */
 #memory {
-  color: #24C3C6;
-  background-color: rgba(0,0,0, 0.4);
+  color: #D2F7A6;
+  background-color: rgba(17,17,27, 0.6);
 }
 #cpu {
-  background-color: rgba(0,0,0, 0.4);
-  color: #D8188D;
+  background-color: rgba(17,17,27, 0.6);
+  color: #f38ba8;
 }
 #clock {
-  color: #1A7BC7;
-  background-color: rgba(0,0,0, 0.4);
+  color: #74c7ec;
+  background-color: rgba(17,17,27, 0.6);
 }
-/* #idle_inhibitor {
-                 color: rgb(221, 182, 242);
-               }*/
 #custom-wall {
-  background-color: rgba(0,0,0, 0.4);
-  color: #33ccff;
+  background-color: rgba(17,17,27, 0.6);
+  color: #D2F7A6;
 }
 #temperature {
   color: rgb(150, 205, 251);
-  background-color: rgba(0,0,0, 0.4);
+  background-color: rgba(17,17,27, 0.6);
 }
 #background {
   color: rgb(248, 189, 150);
-  background-color: rgba(0,0,0, 0.4);
+  background-color: rgba(17,17,27, 0.6);
 }
 #network {
-  color: #651085;
-  background-color: rgba(0,0,0, 0.4);
+  color: #cba6f7;
+  background-color: rgba(17,17,27, 0.6);
 }
 #network.disconnected {
   color: rgb(255, 255, 255);
-  background-color: rgba(0,0,0, 0.4);
+  background-color: rgba(17,17,27, 0.6);
 }
 #custom-powermenu {
   color: rgb(242, 143, 173);
-  background-color: rgba(0,0,0, 0.4);
+  background-color: rgba(17,17,27, 0.6);
   padding-right: 8px;
 }
 #mpd.paused {
   color: #414868;
   font-style: italic;
-  background-color: rgba(0,0,0, 0.4);
+  background-color: rgba(17,17,27, 0.6);
 }
 #mpd.stopped {
   background: transparent;
-  background-color: rgba(0,0,0, 0.4);
+  background-color: rgba(17,17,27, 0.6);
 }
 #mpd {
   color: #c0caf5;
-  background-color: rgba(0,0,0, 0.4);
+  background-color: rgba(17,17,27, 0.6);
 }
 #tray {
   padding-right: 8px;
   padding-left: 10px;
-  background-color: rgba(0,0,0, 0.4);
+  background-color: rgba(17,17,27, 0.6);
   /* border-top-right-radius: 10px; */
   /* border-bottom-right-radius: 10px; */
 }
 #pulseaudio{
-  color: #490DCD;
-  background-color: rgba(0,0,0, 0.4);
+  color: #cba6f7;
+  background-color: rgba(17,17,27, 0.6);
   border-top-left-radius: 10px;
   border-bottom-left-radius: 10px;
   border-top-right-radius: 0px;
   border-bottom-right-radius: 00px;
 }
 #custom-weather{
-  background-color: rgba(0,0,0, 0.4);
+  background-color: rgba(17,17,27, 0.6);
   /* border-top-left-radius: 10px; */
   /* border-bottom-left-radius: 10px; */
   border-top-right-radius: 0px;
   border-bottom-right-radius: 00px;
 }
 #custom-background{
-  background-color: rgba(0,0,0, 0.4);
+  background-color: rgba(17,17,27, 0.6);
   border-top-left-radius: 0px;
   border-bottom-left-radius: 0px;
   border-top-right-radius: 10px;
   border-bottom-right-radius: 10px;
-  color: #490DCD;
+  color: #cba6f7;
 }
 #custom-nvidia{
-  background-color: rgba(0,0,0, 0.4);
+  background-color: rgba(17,17,27, 0.6);
   border-top-left-radius: 10px;
   border-bottom-left-radius: 10px;
   border-top-right-radius: 0px;
   border-bottom-right-radius: 00px;
-  color: #490DCD;
+  color: #cba6f7;
 }
 #custom-notifs{
-  background-color: rgba(0,0,0, 0.4);
+  background-color: rgba(17,17,27, 0.6);
   border-top-left-radius: 0px;
   border-bottom-left-radius: 0px;
   border-top-right-radius: 10px;
   border-bottom-right-radius: 10px;
-  color: #490DCD;
+  color: #cba6f7;
 }
 #custom-temp{
-  background-color: rgba(0,0,0, 0.4);
+  background-color: rgba(17,17,27, 0.6);
   border-top-right-radius: 0px;
   border-bottom-right-radius: 00px;
-  color: #D8188D;
+  color: #f38ba8;
 }
