Just a couple tweaks

--- a/eww/bar/eww.scss
+++ b/eww/bar/eww.scss
@@ -1,6 +1,7 @@
 *{
 	all: unset;
-	font-family: JetbrainsMono Nerd Font;
+	// font-family: JetbrainsMono Nerd Font;
+    font-family: "Termina Test Demi";
 	font-size: 14px;
 }
 
@@ -165,6 +166,7 @@ tooltip {
 	color: $lightgray;
 	background-color: $color20;
 	font-weight: bolder;
+    border-radius: 6px;
 }
 
 .dash {
