--- a/eww/eww.scss
+++ b/eww/eww.scss
@@ -1,7 +1,8 @@
 // GENERAL STUFF ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 *{
 	all: unset;
-	font-family: JetbrainsMono Nerd Font;
+	// font-family: JetbrainsMono Nerd Font;
+    font-family: "Termina Test Demi";
 	font-size: 14px;
 }
 
