--- a/eww/eww.scss
+++ b/eww/eww.scss
@@ -71,6 +71,7 @@ tooltip {
 	background-color: $color24;
 	border-radius: 10px;
 	color: $color16;
+    font-size: 15px;
 	padding: 1px 5px 1px 5px;
 }
 .workspace-button {
